added example of .env

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,4 +1,7 @@
 MONGO_URI = "your mongoDB connection string"
 PORT = port number
 LOG_LEVEL = "info"
-NODE_ENV = "development"
+NODE_ENV = "development" # set this to "production" in production environment
+REFRESH_TOKEN_SECRET = "your token secret"
+REFRESH_TOKEN_EXPIRY = "30d"
+API_KEY = "your API key"
